--- a/index.html
+++ b/index.html
@@ -472,288 +472,293 @@ July 23, 2024
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-17" class="tocsubsection" >
-<span class="sectionnumber">1.1.1</span>&#x2003;Motion in one degree of freedom</a>
+<a href="chapter-1.html#autosec-14" class="tocsubsection" >
+<span class="sectionnumber">1.1.1</span>&#x2003;From particles to systems of particles</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-21" class="tocsection" >
+<a href="chapter-1.html#autosec-18" class="tocsection" >
 <span class="sectionnumber">1.2</span>&#x2003;Hamilton’s variational principle</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-32" class="tocsubsection" >
+<a href="chapter-1.html#autosec-29" class="tocsubsection" >
 <span class="sectionnumber">1.2.1</span>&#x2003;Dynamics of point particles: from Lagrange back to Newton</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-47" class="tocsection" >
+<a href="chapter-1.html#autosec-44" class="tocsection" >
 <span class="sectionnumber">1.3</span>&#x2003;First steps with conserved quantities</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-48" class="tocsubsection" >
+<a href="chapter-1.html#autosec-45" class="tocsubsection" >
 <span class="sectionnumber">1.3.1</span>&#x2003;Back to one degree of freedom</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-53" class="tocsubsection" >
+<a href="chapter-1.html#autosec-50" class="tocsubsection" >
 <span class="sectionnumber">1.3.2</span>&#x2003;The conservation of energy</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-58" class="tocsubsection" >
+<a href="chapter-1.html#autosec-55" class="tocsubsection" >
 <span class="sectionnumber">1.3.3</span>&#x2003;Fun with the phase portrait</a>
 </p>
 
 <p>
-<a href="chapter-1.html#autosec-68" class="tocsection" >
+<a href="chapter-1.html#autosec-65" class="tocsection" >
 <span class="sectionnumber">1.4</span>&#x2003;Euler-Lagrange equations on smooth manifolds</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-79" class="tocchapter" >
+<a href="chapter-2.html#autosec-76" class="tocchapter" >
 <span class="sectionnumber">2</span>&#x2003;Conservation Laws</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-80" class="tocsection" >
+<a href="chapter-2.html#autosec-77" class="tocsection" >
 <span class="sectionnumber">2.1</span>&#x2003;Noether theorem</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-92" class="tocsubsection" >
+<a href="chapter-2.html#autosec-89" class="tocsubsection" >
 <span class="sectionnumber">2.1.1</span>&#x2003;Homogeneity of space: total momentum</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-96" class="tocsubsection" >
+<a href="chapter-2.html#autosec-93" class="tocsubsection" >
 <span class="sectionnumber">2.1.2</span>&#x2003;Isotropy of space: angular momentum</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-103" class="tocsubsection" >
+<a href="chapter-2.html#autosec-100" class="tocsubsection" >
 <span class="sectionnumber">2.1.3</span>&#x2003;Homogeneity of time: the energy</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-104" class="tocsubsection" >
+<a href="chapter-2.html#autosec-101" class="tocsubsection" >
 <span class="sectionnumber">2.1.4</span>&#x2003;Scale invariance: Kepler’s third law</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-110" class="tocsection" >
+<a href="chapter-2.html#autosec-107" class="tocsection" >
 <span class="sectionnumber">2.2</span>&#x2003;The spherical pendulum</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-113" class="tocsection" >
+<a href="chapter-2.html#autosec-110" class="tocsection" >
 <span class="sectionnumber">2.3</span>&#x2003;Intermezzo: small oscillations</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-118" class="tocsubsection" >
+<a href="chapter-2.html#autosec-115" class="tocsubsection" >
 <span class="sectionnumber">2.3.1</span>&#x2003;Decomposition into characteristic oscillations</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-120" class="tocsubsection" >
+<a href="chapter-2.html#autosec-117" class="tocsubsection" >
 <span class="sectionnumber">2.3.2</span>&#x2003;The double pendulum</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-121" class="tocsubsection" >
+<a href="chapter-2.html#autosec-118" class="tocsubsection" >
 <span class="sectionnumber">2.3.3</span>&#x2003;The linear triatomic molecule</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-122" class="tocsubsection" >
+<a href="chapter-2.html#autosec-119" class="tocsubsection" >
 <span class="sectionnumber">2.3.4</span>&#x2003;Zero modes</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-124" class="tocsection" >
+<a href="chapter-2.html#autosec-121" class="tocsection" >
 <span class="sectionnumber">2.4</span>&#x2003;Motion in a central potential</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-133" class="tocsubsection" >
+<a href="chapter-2.html#autosec-130" class="tocsubsection" >
 <span class="sectionnumber">2.4.1</span>&#x2003;Kepler’s problem</a>
 </p>
 
 <p>
-<a href="chapter-2.html#autosec-143" class="tocsection" >
+<a href="chapter-2.html#autosec-140" class="tocsection" >
 <span class="sectionnumber">2.5</span>&#x2003;D’Alembert principle and systems with constraints</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-158" class="tocchapter" >
+<a href="chapter-3.html#autosec-155" class="tocchapter" >
 <span class="sectionnumber">3</span>&#x2003;Hamiltonian mechanics</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-159" class="tocsection" >
+<a href="chapter-3.html#autosec-156" class="tocsection" >
 <span class="sectionnumber">3.1</span>&#x2003;The Legendre Transform in the euclidean plane</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-161" class="tocsection" >
+<a href="chapter-3.html#autosec-158" class="tocsection" >
 <span class="sectionnumber">3.2</span>&#x2003;Intermezzo: cotangent bundle and differential forms</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-162" class="tocsection" >
+<a href="chapter-3.html#autosec-159" class="tocsection" >
 <span class="sectionnumber">3.3</span>&#x2003;The Legendre Transform</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-183" class="tocsection" >
+<a href="chapter-3.html#autosec-180" class="tocsection" >
 <span class="sectionnumber">3.4</span>&#x2003;Poisson brackets and first integrals of motion</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-194" class="tocsubsection" >
+<a href="chapter-3.html#autosec-191" class="tocsubsection" >
 <span class="sectionnumber">3.4.1</span>&#x2003;The symplectic matrix</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-195" class="tocsubsection" >
+<a href="chapter-3.html#autosec-192" class="tocsubsection" >
 <span class="sectionnumber">3.4.2</span>&#x2003;A brief detour on time-dependent hamiltonians</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-196" class="tocsection" >
+<a href="chapter-3.html#autosec-193" class="tocsection" >
 <span class="sectionnumber">3.5</span>&#x2003;Variational principles of hamiltonian mechanics</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-209" class="tocsection" >
+<a href="chapter-3.html#autosec-206" class="tocsection" >
 <span class="sectionnumber">3.6</span>&#x2003;Canonical transformations</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-215" class="tocsubsection" >
+<a href="chapter-3.html#autosec-212" class="tocsubsection" >
 <span class="sectionnumber">3.6.1</span>&#x2003;Hamiltonian vector fields</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-223" class="tocsubsection" >
+<a href="chapter-3.html#autosec-220" class="tocsubsection" >
 <span class="sectionnumber">3.6.2</span>&#x2003;The hamiltonian Noether theorem</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-231" class="tocsection" >
+<a href="chapter-3.html#autosec-228" class="tocsection" >
 <span class="sectionnumber">3.7</span>&#x2003;The symplectic structure on the cotangent bundle</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-245" class="tocsubsection" >
+<a href="chapter-3.html#autosec-242" class="tocsubsection" >
 <span class="sectionnumber">3.7.1</span>&#x2003;Symplectomorphisms and generating functions</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-253" class="tocsubsection" >
+<a href="chapter-3.html#autosec-250" class="tocsubsection" >
 <span class="sectionnumber">3.7.2</span>&#x2003;Darboux Theorem</a>
 </p>
 
 <p>
-<a href="chapter-3.html#autosec-258" class="tocsubsection" >
+<a href="chapter-3.html#autosec-255" class="tocsubsection" >
 <span class="sectionnumber">3.7.3</span>&#x2003;Liouville theorem</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-266" class="tocchapter" >
+<a href="chapter-4.html#autosec-263" class="tocchapter" >
 <span class="sectionnumber">4</span>&#x2003;Integrable systems</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-267" class="tocsection" >
+<a href="chapter-4.html#autosec-264" class="tocsection" >
 <span class="sectionnumber">4.1</span>&#x2003;Lagrangian submanifolds</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-276" class="tocsection" >
+<a href="chapter-4.html#autosec-273" class="tocsection" >
 <span class="sectionnumber">4.2</span>&#x2003;Canonical transformations revisited</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-278" class="tocsubsection" >
+<a href="chapter-4.html#autosec-275" class="tocsubsection" >
 <span class="sectionnumber">4.2.1</span>&#x2003;The generating function \(S_1\)</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-283" class="tocsubsection" >
+<a href="chapter-4.html#autosec-280" class="tocsubsection" >
 <span class="sectionnumber">4.2.2</span>&#x2003;The generating functions \(S_2\) and \(S_3\)</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-288" class="tocsubsection" >
+<a href="chapter-4.html#autosec-285" class="tocsubsection" >
 <span class="sectionnumber">4.2.3</span>&#x2003;Infinitesimal canonical transformations</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-292" class="tocsubsection" >
+<a href="chapter-4.html#autosec-289" class="tocsubsection" >
 <span class="sectionnumber">4.2.4</span>&#x2003;Time-dependent hamiltonian systems</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-299" class="tocsection" >
+<a href="chapter-4.html#autosec-296" class="tocsection" >
 <span class="sectionnumber">4.3</span>&#x2003;Hamilton-Jacobi equations</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-302" class="tocsubsection" >
+<a href="chapter-4.html#autosec-299" class="tocsubsection" >
 <span class="sectionnumber">4.3.1</span>&#x2003;Separable hamiltonians</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-307" class="tocsubsection" >
+<a href="chapter-4.html#autosec-304" class="tocsubsection" >
 <span class="sectionnumber">4.3.2</span>&#x2003;A few exercises</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-313" class="tocsection" >
+<a href="chapter-4.html#autosec-310" class="tocsection" >
 <span class="sectionnumber">4.4</span>&#x2003;The Liouville-Arnold theorem</a>
 </p>
 
 <p>
-<a href="chapter-4.html#autosec-324" class="tocsubsection" >
+<a href="chapter-4.html#autosec-321" class="tocsubsection" >
 <span class="sectionnumber">4.4.1</span>&#x2003;Action-angle variables</a>
 </p>
 
 <p>
-<a href="chapter-5.html#autosec-332" class="tocchapter" >
+<a href="chapter-5.html#autosec-329" class="tocchapter" >
 <span class="sectionnumber">5</span>&#x2003;Hamiltonian perturbation theory</a>
 </p>
 
 <p>
-<a href="chapter-5.html#autosec-333" class="tocsection" >
+<a href="chapter-5.html#autosec-330" class="tocsection" >
 <span class="sectionnumber">5.1</span>&#x2003;Small oscillations revisited</a>
 </p>
 
 <p>
-<a href="chapter-5.html#autosec-341" class="tocsection" >
+<a href="chapter-5.html#autosec-338" class="tocsection" >
 <span class="sectionnumber">5.2</span>&#x2003;Birkhoff normal forms</a>
 </p>
 
 <p>
-<a href="chapter-5.html#autosec-345" class="tocsection" >
+<a href="chapter-5.html#autosec-342" class="tocsection" >
 <span class="sectionnumber">5.3</span>&#x2003;A brief look at KAM theory</a>
 </p>
 
 <p>
-<a href="chapter-5.html#autosec-349" class="tocsection" >
+<a href="chapter-5.html#autosec-346" class="tocsection" >
 <span class="sectionnumber">5.4</span>&#x2003;Nekhoroshev theorem</a>
 </p>
 
 <p>
-<a href="chapter-6.html#autosec-352" class="tocchapter" >
+<a href="chapter-6.html#autosec-349" class="tocchapter" >
 <span class="sectionnumber">6</span>&#x2003;Conclusion</a>
 </p>
 
 <p>
-<a href="chapter-6.html#autosec-352" class="tocchapter" >
+<a href="chapter-6.html#autosec-350" class="tocchapter" >
 Bibliography</a>
+</p>
+
+<p>
+<a href="chapter-6.html#autosec-351" class="tocchapter" >
+Index</a>
 </p>
 
 </nav>
