deploy: 73952af6a3241743364642cafc7ea6710637bff1

--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@ University of Groningen<br />
 <div class="center">
 
 <p>
-Version 1.20 alpha<br />
-September 7, 2024
+Version 1.20 \(\alpha \)2<br />
+September 26, 2024
 </p>
 </div>
 <!--................................-->
